--- a/lucky7s.html
+++ b/lucky7s.html
@@ -1,5 +1,9 @@
 <!--
 Created on 10/6/2019 by Thomas Sluciak
+1.0.1 - Fixed issue with playLucky7s() being called twice (issue was two onlick commands in the buttons)
+			(fixed) Starting bet value is not appearing in results table, all others are. 
+					Not a logic or code issue as far as I can tell - changed td tag id to starting and that fixed it. Coding is wonderful, right? 
+			Still some big formatting issues with the input fields and buttons on the website itself
 1.0.0 Built general structure of website. Added form. Styled. 
 -->
 <!DOCTYPE html>
@@ -57,7 +61,7 @@ Created on 10/6/2019 by Thomas Sluciak
 <body>
 	<div class="container col-xs-3 offset-4">
 		<form name="lucky7s" id="lucky7s" onsubmit="return playLucky7s()"
-			onreset="resetGame()" class="form-inline block">
+			onreset="displayElements()" class="form-inline block">
 			<div class="form-group">
 				
 				<label for="startingBet">Starting Bet: </label>			
@@ -67,14 +71,14 @@ Created on 10/6/2019 by Thomas Sluciak
 			</div>
 			<button type="submit" id="playButton" class="btn btn-default">Let's Play!</button>
             <!-- Need to make this appear AFTER playing a game. Once clicked should disapper -->
-			<button type="reset" id="playAgainButton" class="btn" style="display:none;">Play Again!</button>
+			<button type="reset" id="playAgainButton" class="btn" style="display:none">Play Again!</button>
 		</form>
 	<br />
 			
 		
 		<hr />
 		<br />
-		<table id="results" class="table table-striped" style="display:none;">
+		<table id="results" class="table table-striped" style="display:none">
 			<thead>
 				<tr>
 					<th>Results</th>
@@ -83,7 +87,7 @@ Created on 10/6/2019 by Thomas Sluciak
 			<tbody>
 				<tr>
 					<td><b>Starting Bet:</b></td>
-					<td>$<span id="startingBet"></span><td>
+					<td>$<span id="starting"></span><td>
 				</tr>
 				<tr>
 					<td><b>Total Rolls Before Going Broke:</b></td>
